<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.view.MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="@dimen/_20sdp"
        android:layout_margin="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_12sdp"
        android:backgroundTint="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/pizzaName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:padding="@dimen/_4sdp"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:src="@drawable/circle"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_10sdp"/>


            <TextView
                android:id="@+id/descriptionHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_below="@id/pizzaName"
                android:padding="@dimen/_4sdp"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/descriptionHeader"
                android:text="@string/this_is_the_pizza_that_is_tasty_to_eat_and_this_is_emmy"
                android:padding="@dimen/_4sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvQuantity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/description"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_5sdp" />

        </RelativeLayout>




    </androidx.cardview.widget.CardView>
</LinearLayout>